[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Resources/GameOverFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Sprites/block-button.png" type="Texture" id=3]
[ext_resource path="res://Resources/ScoreFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://World/GameOver.gd" type="Script" id=5]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 66.0
margin_top = 30.0
margin_right = 206.0
margin_bottom = 149.0

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 140.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 4 )
text = "Score: "
align = 1

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 140.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 24 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 16, 16 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainButton" type="Button" parent="CenterContainer/VBoxContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "TRY AGAIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="CenterContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 140.0
margin_bottom = 119.0
rect_min_size = Vector2( 0, 24 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 16, 16 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="CenterContainer/VBoxContainer/NinePatchRect/TryAgainButton" to="." method="_on_TryAgainButton_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/NinePatchRect2/ExitButton" to="." method="_on_ExitButton_button_up"]
